# hyplan

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.md  PLAN.md  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  notebooks.yml  release.yml  tests.yml
docs/: architecture.md  concepts.md  conf.py  developer.md  index.md  installation.md  stability.md
docs/api/: aircraft.md  airports.md  airspace.md  atmosphere.md  awp.md  campaign.md  clouds.md  download.md  dubins3d.md  dubins_path.md  exceptions.md  exports.md  flight_box.md  flight_line.md  flight_optimizer.md  flight_patterns.md  flight_plan.md  geometry.md  glint.md  gui.md  interactive.md  pattern.md  phenology.md  plotting.md  profiling_lidar.md  satellites.md  sensors.md  sun.md  swath.md  terrain.md  units.md  waypoint.md  winds.md
examples/: test_aircraft.py  test_airports.py  test_clouds.py  test_dubins.py  test_flight_box.py  test_flight_line.py  test_flight_optimizer.py  test_flight_plan.py  test_frame_camera.py  test_geometry.py  test_glint.py  test_satellites.py  test_swath.py  test_units.py
examples/data/: hyspiri.geojson
hyplan/: __init__.py  _auth.py  _trochoid_solver.py  aircraft.py  aircraft_models.py  airports.py  airspace.py  atmosphere.py  awp.py  campaign.py  clouds.py  download.py  dubins3d.py  dubins_path.py  exceptions.py  exports.py  flight_box.py  flight_line.py  flight_optimizer.py  flight_patterns.py  flight_plan.py  frame_camera.py  geometry.py  glint.py  lvis.py  pattern.py  plotting.py  radar.py  satellites.py  sensors.py  sun.py  swath.py  terrain.py  todo  units.py  waypoint.py  winds.py
hyplan/aircraft/: __init__.py  _base.py  _models.py
hyplan/aircraft/adsb/: __init__.py  airdata.py  fitting.py  io.py  models.py  phases.py  pipeline.py  priors.py
hyplan/clouds/: __init__.py  analysis.py  forecast.py  plotting.py  sources.py
hyplan/data/: __init__.py  faa_radar_exclusion_zones.geojson
hyplan/exports/: __init__.py  _common.py  csv.py  excel.py  gpx.py  icartt.py  kml.py  text.py
hyplan/gui/: __init__.py  _state.py  flight_line_manager.py  waypoint_editor.py
hyplan/instruments/: __init__.py  _base.py  awp.py  frame_camera.py  line_scanner.py  lvis.py  profilinglidar.py  radar.py
hyplan/interactive/: __init__.py  flight_line_manager.py  waypoint_editor.py
hyplan/phenology/: __init__.py  _appeears.py  _qa.py  analysis.py  plotting.py  sources.py
hyplan/planning/: __init__.py  engine.py  segments.py
hyplan/terrain/: __init__.py  _demgrid.py  elevation.py  intersection.py  io.py
hyplan/winds/: __init__.py  base.py  factory.py  gridded.py  simple.py  utils.py
hyplan/winds/providers/: __init__.py  gfs.py  gmao.py  merra2.py
notebooks/: README.md  aircraft_performance.ipynb  airport_selection.ipynb  airspace_check.ipynb  awp_planning.ipynb  campaign_management.ipynb  cloud_analysis.ipynb  cloud_analysis_gee.ipynb  dubins_path_planning.ipynb  export_formats.ipynb  flight_box_generation.ipynb  flight_line_operations.ipynb  flight_optimizer_demo.ipynb  flight_patterns.ipynb  flight_plan_computation.ipynb  frame_camera_planning.ipynb  glint_analysis.ipynb  glint_arc_path.geojson  glint_arc_planning.ipynb  glint_arc_swath.geojson  interactive_planning.ipynb  interactive_widgets.ipynb  lidar_lvis_planning.ipynb  phenology_analysis.ipynb  profiling_lidar_planning.ipynb  radar_sar_missions.ipynb  satellite_coordination.ipynb  sensor_comparison.ipynb  solar_planning.ipynb  stereo_oblique_planning.ipynb  terrain_aware_planning.ipynb  tutorial.ipynb  validation.ipynb  validation_executed.ipynb  wind_effects.ipynb  winds.ipynb
notebooks/exampledata/: catalina.geojson  wdts.geojson
notebooks/interactive_export/: flight_plan.gpx  flight_plan.ict  flight_plan.kml  flight_plan.kmz  flight_plan.txt  flight_plan.xlsx  flight_plan_ER2.csv  flight_plan_FOREFLIGHT.csv  flight_plan_FOREFLIGHT_oneline.txt  flight_plan_Honeywell.csv  flight_plan_for_pilots.xlsx
paper/: paper.bib  paper.md
paper/figures/: fig1_workflow.py  fig2_flight_box.py  fig3_wind_dubins.py  fig4_cloud_phenology.py  fig4_ndvi_cache.csv  generate_all.py  generate_figures.ipynb  rincon_de_la_vieja.geojson
tests/: conftest.py  test_adsb.py  test_aircraft.py  test_airports.py  test_airspace.py  test_atmosphere.py  test_awp.py  test_campaign.py  test_clouds.py  test_download.py  test_dubins3d.py  test_dubins3d_integration.py  test_dubins_path.py  test_e2e_workflows.py  test_exports.py  test_flight_box.py  test_flight_line.py  test_flight_optimizer.py  test_flight_patterns.py  test_flight_plan.py  test_frame_camera.py  test_geometry.py  test_glint.py  test_gui.py  test_integration.py  test_interactive.py  test_lvis.py  test_phenology.py  test_plotting.py  test_profiling_lidar.py  test_radar.py  test_satellites.py  test_sensors.py  test_sun.py  test_swath.py  test_terrain.py  test_units.py  test_waypoint.py  test_winds.py
