[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "hyplan"
dynamic = ["version"]
description = "Planning software for airborne remote sensing science campaigns"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Ryan Pavlick", email = "ryan.p.pavlick@nasa.gov"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "geopandas",
    "numpy",
    "pandas",
    "pint",
    "rasterio",
    "pymap3d",
    "pyproj",
    "requests",
    "rtree",
    "shapely",
    "simplekml",
    "skyfield",
    "timezonefinder",
    "folium",
    "gpxpy",
    "matplotlib",
    "networkx",
    "xlsxwriter",
]

[project.optional-dependencies]
mag = ["geomag"]
clouds = ["earthengine-api", "seaborn"]
winds = ["xarray", "netcdf4", "earthaccess", "pydap", "cfgrib"]
adsb = ["traffic>=2.8"]
gui = ["ipyleaflet", "ipywidgets>=8", "ipydatagrid"]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/ryanpavlick/hyplan"
Documentation = "https://ryanpavlick.github.io/hyplan/"
Repository = "https://github.com/ryanpavlick/hyplan"
Issues = "https://github.com/ryanpavlick/hyplan/issues"

[tool.setuptools.packages.find]
include = ["hyplan*"]

[tool.setuptools]
license-files = ["LICENSE.md"]

[tool.setuptools.package-data]
hyplan = ["py.typed", "data/*.geojson", "data/*.bsp"]

[tool.setuptools_scm]
version_file = "hyplan/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["hyplan"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
